--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Long+Cang&display=swap" rel="stylesheet">
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Long+Cang&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" media="(max-width:500px)" href="mobile.css" />
     <title>Elicum</title>
@@ -31,9 +26,11 @@
           </svg>
           <h4>Elicum</h4>
         </div>
-        <div class="nav ville">Les villes</div>
-        <div class="nav">Notre équipe</div>
-        <div class="nav">Contact</div>
+        <div class="nav ville">
+          <a href="#container3">Les villes</a>
+        </div>
+        <div class="nav"><a href="#container4">Notre équipe</a></div>
+        <div class="nav"><a href="#container6">Contact</a></div>
       </div>
     </header>
     <main>
