--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </p>
         </div>
       </section>
-      <section>
+      <section id="container3">
         <div class="titre">
           <h3>Les destinations prisèes du moment</h3>
         </div>
@@ -76,7 +76,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section id="container4">
         <div class="container4">
           <div class="ekip">
             <img src="image/guide.webp" alt="visite à Londre" />
@@ -152,7 +152,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section id="container6">
         <div class="container6">
           <h3>Pour nous <span>contacter</span></h3>
 
